Wykresy loginów i urządzeń
* Przeniosłem funkcje związane z wczytywaniem zipa z messages.py do util.py
* Nowy jupyter notatnik
* requirements.txt user-agents
* I dodałem 2 wykresy w other

--- a/analytics/messenger_analytics_notebook.ipynb
+++ b/analytics/messenger_analytics_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,40 +150,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_friends_table(zip):\n",
-    "    folders = get_structure(zip)\n",
+    "# def get_friends_table(zip):\n",
+    "#     folders = get_structure(zip)\n",
     "    \n",
-    "    friends_fname = folders['friends']['__files'][0][1]\n",
+    "#     friends_fname = folders['friends']['__files'][0][1]\n",
     "    \n",
-    "    friends = pd.DataFrame()\n",
-    "    with zip.open(friends_fname) as f:\n",
-    "        json_file = json.loads(f.read())\n",
+    "#     friends = pd.DataFrame()\n",
+    "#     with zip.open(friends_fname) as f:\n",
+    "#         json_file = json.loads(f.read())\n",
     "        \n",
-    "        names = []\n",
-    "        dates = []\n",
-    "        for i in json_file['friends']:\n",
-    "            names.append(i['name'].encode('latin1').decode('utf8'))\n",
-    "            dates.append(i['timestamp'])\n",
-    "        friends = pd.DataFrame({'name': names, 'date_added': dates})\n",
-    "        friends['date_added'] = pd.to_datetime(friends['date_added'], unit='s')\n",
+    "#         names = []\n",
+    "#         dates = []\n",
+    "#         for i in json_file['friends']:\n",
+    "#             names.append(i['name'].encode('latin1').decode('utf8'))\n",
+    "#             dates.append(i['timestamp'])\n",
+    "#         friends = pd.DataFrame({'name': names, 'date_added': dates})\n",
+    "#         friends['date_added'] = pd.to_datetime(friends['date_added'], unit='s')\n",
     "        \n",
-    "    return friends\n",
+    "#     return friends\n",
     "            \n",
-    "\n",
+    "def get_security(zip):\n",
+    "    folders = get_structure(zip)\n",
+    "#     message_files = get_messages(folders['messages']['inbox'])\n",
+    "    \n",
+    "    acc_activity = None\n",
+    "    for i in folders['security_and_login_information']['__folders']:\n",
+    "        if i[0] == 'your_facebook_activity':\n",
+    "            acc_activity = i[1]\n",
+    "            break\n",
+    "    \n",
+    "    with zip.open(acc_activity) as f:\n",
+    "        \n",
+    "    \n",
     "zip_path = \"/home/jacek/Pobrane/Okon_Slowacki_30_11_2020.zip\"\n",
     "# zip_path = \"/home/jacek/Pobrane/facebook-jacekstasiak75 222.zip\"\n",
     "# zip_path = \"/home/jacek/Pobrane/facebook-janpodkowa98.zip\"\n",
     "\n",
     "data = None\n",
     "frens = None\n",
+    "logins = None\n",
     "with zp.ZipFile(zip_path) as zip:\n",
     "    data = gen_pandas_table(zip)\n",
     "    \n",
     "    frens = get_friends_table(zip)\n",
+    "    \n",
+    "    logins = get_security(zip)\n",
+    "    \n",
     "messages_table = data['messages']"
    ]
   },
@@ -196,9 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'table'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-edaa3abecf4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memoji_ranking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;31m# a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;31m# test = '🤔jakis tekst 🤔 🤔 🤔 '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-edaa3abecf4d>\u001b[0m in \u001b[0;36memoji_ranking\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0memoji_ranking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'table'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mmy_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'username'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mmsgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sender'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mmy_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'content'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'table'"
+     ]
+    }
+   ],
    "source": [
     "# print(ord(list(emoji.UNICODE_EMOJI.keys())[0]))\n",
     "# print(ord(list(emoji.UNICODE_EMOJI.keys())[-2]))\n",
@@ -752,26 +781,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'messages'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-110-e4ec675e8324>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mchart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtotal_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'messages'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# messa = data['messages']\n",
     "# messa = messa[messa.sender != data['username']]\n",
     "# grouped = messa.groupby(messa.)\n",
-    "\n",
+    "# malefemale\n",
     "messages = data['messages']\n",
     "\n",
     "messages_to = {'Male': 0, 'Female': 0, 'Unknown': 0}\n",
