Dodano wykres postów i zdjęć w konwersacji.

--- a/analytics/notebooks/messenger_analytics_notebook.ipynb
+++ b/analytics/notebooks/messenger_analytics_notebook.ipynb
@@ -154,24 +154,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_friends_table(zip):\n",
-    "#     folders = get_structure(zip)\n",
+    "def get_friends_table(zip):\n",
+    "    folders = get_structure(zip)\n",
     "    \n",
-    "#     friends_fname = folders['friends']['__files'][0][1]\n",
+    "    friends_fname = folders['friends']['__files'][0][1]\n",
     "    \n",
-    "#     friends = pd.DataFrame()\n",
-    "#     with zip.open(friends_fname) as f:\n",
-    "#         json_file = json.loads(f.read())\n",
+    "    friends = pd.DataFrame()\n",
+    "    with zip.open(friends_fname) as f:\n",
+    "        json_file = json.loads(f.read())\n",
     "        \n",
-    "#         names = []\n",
-    "#         dates = []\n",
-    "#         for i in json_file['friends']:\n",
-    "#             names.append(i['name'].encode('latin1').decode('utf8'))\n",
-    "#             dates.append(i['timestamp'])\n",
-    "#         friends = pd.DataFrame({'name': names, 'date_added': dates})\n",
-    "#         friends['date_added'] = pd.to_datetime(friends['date_added'], unit='s')\n",
+    "        names = []\n",
+    "        dates = []\n",
+    "        for i in json_file['friends']:\n",
+    "            names.append(i['name'].encode('latin1').decode('utf8'))\n",
+    "            dates.append(i['timestamp'])\n",
+    "        friends = pd.DataFrame({'name': names, 'date_added': dates})\n",
+    "        friends['date_added'] = pd.to_datetime(friends['date_added'], unit='s')\n",
     "        \n",
-    "#     return friends\n",
+    "    return friends\n",
     "            \n",
     "def get_security(zip):\n",
     "    folders = get_structure(zip)\n",
@@ -183,7 +183,7 @@
     "            acc_activity = i[1]\n",
     "            break\n",
     "    \n",
-    "    with zip.open(acc_activity) as f:\n",
+    "#     with zip.open(acc_activity) as f:\n",
     "        \n",
     "    \n",
     "zip_path = \"/home/jacek/Pobrane/Okon_Slowacki_30_11_2020.zip\"\n",
@@ -198,7 +198,7 @@
     "    \n",
     "    frens = get_friends_table(zip)\n",
     "    \n",
-    "    logins = get_security(zip)\n",
+    "#     logins = get_security(zip)\n",
     "    \n",
     "messages_table = data['messages']"
    ]
@@ -644,9 +644,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1     False\n",
+       "2     False\n",
+       "3     False\n",
+       "4     False\n",
+       "5     False\n",
+       "6     False\n",
+       "7     False\n",
+       "8     False\n",
+       "9      True\n",
+       "10    False\n",
+       "11    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# wykres liczby znajomych \n",
     "\n",
@@ -668,47 +691,48 @@
     "t = pd.Series(t.date)\n",
     "days_with_frens = t.isin(frens.date_added.dt.date)\n",
     "days_with_frens = ~days_with_frens\n",
-    "t[days_with_frens]\n",
+    "days_with_frens\n",
+    "# t[days_with_frens]\n",
     "# frens = frens.append({'date_added': t[days_with_frens], 'name': None}, ignore_index=True)\n",
-    "frens2 = pd.concat([frens, pd.DataFrame({'date_added': t[days_with_frens], 'name': ['-1'] * len(t[days_with_frens])})])\n",
-    "frens2 = frens2.sort_values(['date_added']).reset_index(drop=True)\n",
-    "# frens2.to_csv('dump3.csv')\n",
-    "frens2['date_added'] = pd.to_datetime(frens2['date_added'])\n",
-    "a = frens2.groupby([frens2.date_added.dt.year, frens2.date_added.dt.month, frens2.date_added.dt.day])\n",
+    "# frens2 = pd.concat([frens, pd.DataFrame({'date_added': t[days_with_frens], 'name': ['-1'] * len(t[days_with_frens])})])\n",
+    "# frens2 = frens2.sort_values(['date_added']).reset_index(drop=True)\n",
+    "# # frens2.to_csv('dump3.csv')\n",
+    "# frens2['date_added'] = pd.to_datetime(frens2['date_added'])\n",
+    "# a = frens2.groupby([frens2.date_added.dt.year, frens2.date_added.dt.month, frens2.date_added.dt.day])\n",
     "\n",
-    "# a.count().replace({\"name\": {'None': None}})\n",
-    "b = a['name'].agg(lambda x: len(x[x != '-1']))\n",
-    "b = b.cumsum()\n",
+    "# # a.count().replace({\"name\": {'None': None}})\n",
+    "# b = a['name'].agg(lambda x: len(x[x != '-1']))\n",
+    "# b = b.cumsum()\n",
     "\n",
     "# map(list(b.index), str)\n",
     "\n",
-    "timespan = frens.date_added.max() - frens.date_added.min()\n",
-    "# timespan.days\n",
-    "time_index = b.index\n",
-    "if timespan.days > 40:\n",
-    "    distance = 'W'\n",
-    "    if timespan.days > 360:\n",
-    "        distance = 'QS'\n",
-    "    elif timespan.days > 90:\n",
-    "        distance = 'M'\n",
-    "    labelspan = pd.date_range(frens.date_added.min().date(), frens.date_added.max(), freq=distance)\n",
+    "# timespan = frens.date_added.max() - frens.date_added.min()\n",
+    "# # timespan.days\n",
+    "# time_index = b.index\n",
+    "# if timespan.days > 40:\n",
+    "#     distance = 'W'\n",
+    "#     if timespan.days > 360:\n",
+    "#         distance = 'QS'\n",
+    "#     elif timespan.days > 90:\n",
+    "#         distance = 'M'\n",
+    "#     labelspan = pd.date_range(frens.date_added.min().date(), frens.date_added.max(), freq=distance)\n",
     "\n",
-    "    labelspan2 = []\n",
-    "    for i in labelspan:\n",
-    "        t = (i.year, i.month, i.day)\n",
-    "        labelspan2.append(t)\n",
+    "#     labelspan2 = []\n",
+    "#     for i in labelspan:\n",
+    "#         t = (i.year, i.month, i.day)\n",
+    "#         labelspan2.append(t)\n",
     "\n",
-    "    index2 = []\n",
-    "    for i in time_index:\n",
-    "        if i in labelspan2:\n",
-    "            index2.append(i)\n",
-    "        else:\n",
-    "            index2.append(None)\n",
-    "    time_index = index2\n",
+    "#     index2 = []\n",
+    "#     for i in time_index:\n",
+    "#         if i in labelspan2:\n",
+    "#             index2.append(i)\n",
+    "#         else:\n",
+    "#             index2.append(None)\n",
+    "#     time_index = index2\n",
     "        \n",
-    "chart = pygal.Line(x_label_rotation=-45, fill=True)\n",
-    "chart.x_labels = list(map(lambda a: \"{}/{}/{}\".format(a[2], a[1], a[0]) if a is not None else a, time_index)) # eeehhh\n",
-    "chart.add('Frens', b.to_list(), dots_size=0)\n",
+    "# chart = pygal.Line(x_label_rotation=-45, fill=True)\n",
+    "# chart.x_labels = list(map(lambda a: \"{}/{}/{}\".format(a[2], a[1], a[0]) if a is not None else a, time_index)) # eeehhh\n",
+    "# chart.add('Frens', b.to_list(), dots_size=0)\n",
     "\n",
     "\n",
     "# a['date_added']\n",
@@ -781,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
