--- a/analytics/notebooks/Analitics3.ipynb
+++ b/analytics/notebooks/Analitics3.ipynb
@@ -37,9 +37,9 @@
     "\n",
     "data = None\n",
     "acc_activity = None\n",
-    "with zp.ZipFile(zip_path) as zip:\n",
-    "#     data = gen_pandas_table(zip)\n",
-    "    data = preprocess(zip)\n"
+    "with zp.ZipFile(zip_path) as zip_file:\n",
+    "#     data = gen_pandas_table(zip_file)\n",
+    "    data = preprocess(zip_file)\n"
    ]
   },
   {
@@ -50,8 +50,8 @@
    "source": [
     "# wczytywanie aktywności poza facebookiem\n",
     "\n",
-    "with zp.ZipFile(zip_path) as zip:\n",
-    "    folders = get_structure(zip)\n",
+    "with zp.ZipFile(zip_path) as zip_file:\n",
+    "    folders = _aux_get_structure(zip_file)\n",
     "    \n",
     "    json_fname = None\n",
     "    for name in folders['ads_and_businesses']['__files']:\n",
@@ -65,7 +65,7 @@
     "        names = []\n",
     "        types = []\n",
     "        times = []\n",
-    "        with zip.open(json_fname) as f:\n",
+    "        with zip_file.open(json_fname) as f:\n",
     "            jdata = json.loads(f.read())\n",
     "            for act in jdata['off_facebook_activity']:\n",
     "#                 print(act['name'])\n",
@@ -223,9 +223,9 @@
     "# Wykresy z liczbą postów\n",
     "\n",
     "post_data = None\n",
-    "with zp.ZipFile(zip_path) as zip:\n",
-    "    _folders = _aux_get_structure(zip)\n",
-    "    with zip.open(_folders['posts']['__files'][0][1]) as f:\n",
+    "with zp.ZipFile(zip_path) as zip_file:\n",
+    "    _folders = _aux_get_structure(zip_file)\n",
+    "    with zip_file.open(_folders['posts']['__files'][0][1]) as f:\n",
     "        jdata = json.loads(f.read())\n",
     "        tdata = {'time': [], 'title': []}\n",
     "        \n",
@@ -316,6 +316,107 @@
     "df = pd.DataFrame({'name': ['jacek'] * len(t) + ['andrzej'] * len(d), 'photo': t + d})\n",
     "\n",
     "df.groupby(df.name).photo.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Komments\n",
+    "\n",
+    "# Wykresy z liczbą postów\n",
+    "\n",
+    "comment_data = None\n",
+    "with zp.ZipFile(zip_path) as zip_file:\n",
+    "    folders = _aux_get_structure(zip_file)\n",
+    "    \n",
+    "    file_paths = [i[1] for i in folders['comments']['__files']]\n",
+    "    comment_data = pd.DataFrame({'time': [], 'content': [], 'group': []})\n",
+    "    \n",
+    "    for path in file_paths:\n",
+    "        if path == 'posts/no-data.txt':\n",
+    "            break\n",
+    "            \n",
+    "        with zip_file.open(path) as f:\n",
+    "            jdata = json.loads(f.read())\n",
+    "            tdata = {'time': [], 'content': [], 'group': []}\n",
+    "\n",
+    "#             if isinstance(jdata, dict):\n",
+    "#                 jdata = [jdata]\n",
+    "            \n",
+    "#             print(jdata)\n",
+    "            \n",
+    "            for i in jdata['comments']:\n",
+    "                tdata['time'].append(i['timestamp'])\n",
+    "                if ('data' in i) and len(i['data']) > 0 and 'comment' in i['data'][0]:\n",
+    "                    com = i['data'][0]['comment']\n",
+    "                    \n",
+    "                    content = com.get('comment')\n",
+    "                    if content:\n",
+    "                        content = content.encode('latin1').decode('utf8')\n",
+    "                    group = com.get('group')\n",
+    "                    if group:\n",
+    "                        group = group.encode('latin1').decode('utf8')\n",
+    "                        \n",
+    "                    tdata['content'].append(content)\n",
+    "                    tdata['group'].append(group)\n",
+    "                else:\n",
+    "                    tdata['content'].append(None)\n",
+    "                    tdata['group'].append(None)\n",
+    "            temp_table = pd.DataFrame(tdata)\n",
+    "            temp_table.time = pd.to_datetime(temp_table.time, unit='s')\n",
+    "            comment_data = pd.concat([comment_data, temp_table])\n",
+    "     \n",
+    "# comment_data.describe()\n",
+    "# post_data # Dodaj do data\n",
+    "# post_data = pd.concat([post_data, pd.DataFrame({'time': [pd.Timestamp(\"2020-11-25 12:00:35\")], 'title': ['Fake post.']})])\n",
+    "\n",
+    "# cum graph (zakres się dostosowywuje)\n",
+    "vals, index = get_cum_graph(comment_data['time'])\n",
+    "char = pygal.Line(fill=True, x_label_rotation=-45, show_legend=False)\n",
+    "char.x_labels = index.date\n",
+    "char.add('', list(vals))\n",
+    "\n",
+    "# graph by years\n",
+    "posts_by_year = comment_data.groupby(comment_data.time.dt.year).count()\n",
+    "year_values = list(posts_by_year.time)\n",
+    "year_indexes = list(posts_by_year.index)\n",
+    "\n",
+    "if len(posts_by_year) == 1:\n",
+    "    year_values = [0] + year_values\n",
+    "    year_indexes = [year_indexes[0] - 1] + year_indexes\n",
+    "\n",
+    "chart = pygal.Line(show_legend=False)\n",
+    "chart.x_labels = year_indexes\n",
+    "chart.add('', year_values)\n",
+    "\n",
+    "# graph by hours\n",
+    "gr2 = comment_data.groupby(comment_data.time.dt.hour)\n",
+    "total_posts_n = len(comment_data)\n",
+    "gr2 = dict(gr2.count().time)\n",
+    "index = range(24)\n",
+    "values = [(gr2[i] / total_posts_n) * 100 if i in gr2 else 0 for i in index]\n",
+    "\n",
+    "radar_chart = pygal.Radar(show_legend=False, fill=True, height=800)\n",
+    "radar_chart.x_labels = index\n",
+    "radar_chart.add('', values)\n",
+    "\n",
+    "# graph by group\n",
+    "MAX_LEN = 40\n",
+    "def shorten_title(s):\n",
+    "    if len(s) > MAX_LEN:\n",
+    "        s = s[:MAX_LEN] + '...'\n",
+    "    return s\n",
+    "\n",
+    "comm_by_group = comment_data.groupby(comment_data.group).time.count().dropna()\n",
+    "comm_by_group = comm_by_group.sort_values()\n",
+    "group_chart = pygal.HorizontalBar(show_legend=False)\n",
+    "group_chart.x_labels = list(map(shorten_title, comm_by_group.index))\n",
+    "group_chart.add('', list(comm_by_group))\n",
+    "# for i, j in zip(comm_by_group.index, list(comm_by_group)):\n",
+    "#     print(i, j)"
    ]
   },
   {
