Dodane wykresy powiadomień.

--- a/analytics/notebooks/Analitics3.ipynb
+++ b/analytics/notebooks/Analitics3.ipynb
@@ -29,9 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_path = \"/home/jacek/Pobrane/Okon_Slowacki_30_11_2020.zip\"\n",
+    "# zip_path = \"/home/jacek/Pobrane/Okon_Slowacki_30_11_2020.zip\"\n",
     "# zip_path = \"/home/jacek/Pobrane/facebook-jacekstasiak75 222.zip\"\n",
-    "# zip_path = \"/home/jacek/Pobrane/facebook-jacekstasiak75.zip\"\n",
+    "zip_path = \"/home/jacek/Pobrane/facebook-jacekstasiak75.zip\"\n",
     "# zip_path = \"/home/jacek/Pobrane/win10 unpacked/facebook-okoń 28-12-20.zip\"\n",
     "# zip_path = \"/home/jacek/Pobrane/facebook-janpodkowa98.zip\"\n",
     "\n",
@@ -283,11 +283,15 @@
     "msg = data['messages']\n",
     "# msg[msg.conversation == 'Andrzej Tat'].photos.dtype\n",
     "# msg[msg.conversation == '8 Ball Pool Game']\n",
-    "photo_count = msg.groupby(msg.conversation).photos.sum().sort_values()\n",
+    "photo_count = msg.groupby(msg.conversation).photos.sum().sort_values().tail(10)\n",
     "photo_count = photo_count[photo_count != 0]\n",
+    "# photo_count = photo_count[:10]\n",
+    "\n",
     "chart = pygal.HorizontalBar(show_legend=False)\n",
     "chart.x_labels = list(photo_count.index)\n",
-    "chart.add('', photo_count)"
+    "chart.add('', photo_count)\n",
+    "\n",
+    "# photo_count"
    ]
   },
   {
