Dodano wykres typów wyszukiwanych elementów

--- a/analytics/notebooks/klima7_notebook.ipynb
+++ b/analytics/notebooks/klima7_notebook.ipynb
@@ -55,121 +55,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>searched text</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Linus Sebastian</th>\n",
-       "      <td>Linus Sebastian</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Agata Sadowska</th>\n",
-       "      <td>Agata Sadowska</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Biedronka</th>\n",
-       "      <td>Biedronka</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mark zuckerberg</th>\n",
-       "      <td>mark zuckerberg</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kamil Gaik</th>\n",
-       "      <td>Kamil Gaik</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>memy informatyczne</th>\n",
-       "      <td>memy informatyczne</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>kamil gaik</th>\n",
-       "      <td>kamil gaik</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Okoń</th>\n",
-       "      <td>Okoń</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>między nami</th>\n",
-       "      <td>między nami</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Facebook profile pic gen</th>\n",
-       "      <td>Facebook profile pic gen</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>146 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                     searched text  count\n",
-       "Linus Sebastian                    Linus Sebastian      3\n",
-       "Agata Sadowska                      Agata Sadowska      3\n",
-       "Biedronka                                Biedronka      2\n",
-       "mark zuckerberg                    mark zuckerberg      2\n",
-       "Kamil Gaik                              Kamil Gaik      2\n",
-       "...                                            ...    ...\n",
-       "memy informatyczne              memy informatyczne      1\n",
-       "kamil gaik                              kamil gaik      1\n",
-       "Okoń                                          Okoń      1\n",
-       "między nami                            między nami      1\n",
-       "Facebook profile pic gen  Facebook profile pic gen      1\n",
-       "\n",
-       "[146 rows x 2 columns]"
+       "Przeszukiwałeś Facebooka    777\n",
+       "Wyszukiwano grupy             3\n",
+       "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counts = history.message.value_counts()\n",
-    "table = pd.DataFrame({'searched text': counts.index, 'count': counts})\n",
-    "table"
+    "types = history.type.value_counts()\n",
+    "types"
    ]
   },
   {
