Dodany wykres naszych zainteresowań według fb

--- a/analytics/notebooks/klima7_notebook.ipynb
+++ b/analytics/notebooks/klima7_notebook.ipynb
@@ -55,30 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Przeszukiwałeś Facebooka    777\n",
-       "Wyszukiwano grupy             3\n",
-       "Name: type, dtype: int64"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "types = history.type.value_counts()\n",
-    "types"
+    "def _get_your_topics(zip_file):\n",
+    "    with zip_file.open('your_topics/your_topics.json') as f:\n",
+    "        jdata = json.loads(f.read())\n",
+    "        topics = []\n",
+    "        for topic in list(jdata['inferred_topics']):\n",
+    "            topics.append(fb_decode(topic))\n",
+    "    topics = pd.DataFrame({'topic': topics})\n",
+    "    return topics\n",
+    "\n",
+    "topics = None\n",
+    "with zp.ZipFile(file_path) as zip:\n",
+    "    topics = _get_your_topics(zip)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -102,106 +99,46 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>message</th>\n",
-       "      <th>type</th>\n",
+       "      <th>topic</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>łukasz klimkiewicz</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
+       "      <td>Software Engineering &amp; Computer Programming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Łukasz Klimkiewicz</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
+       "      <td>Computer Science</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Samorząd Studencki Instytutu Fizyki</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
+       "      <td>Artificial Intelligence &amp; Machine Learning</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>samorzad studencki instytutu</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1000 pomysłów na dania z GRILLa</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>153</td>\n",
-       "      <td>Menchester</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>154</td>\n",
-       "      <td>Barcelona</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>155</td>\n",
-       "      <td>sPORT TEAM</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>156</td>\n",
-       "      <td>Mark Zuckerberg</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>157</td>\n",
-       "      <td>mark zuckerberg</td>\n",
-       "      <td>Przeszukiwałaś Facebooka</td>\n",
+       "      <td>Clothing &amp; Accessories</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>158 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     index                              message                      type\n",
-       "0        0                   łukasz klimkiewicz  Przeszukiwałaś Facebooka\n",
-       "1        1                   Łukasz Klimkiewicz  Przeszukiwałaś Facebooka\n",
-       "2        2  Samorząd Studencki Instytutu Fizyki  Przeszukiwałaś Facebooka\n",
-       "3        3         samorzad studencki instytutu  Przeszukiwałaś Facebooka\n",
-       "4        4      1000 pomysłów na dania z GRILLa  Przeszukiwałaś Facebooka\n",
-       "..     ...                                  ...                       ...\n",
-       "153    153                           Menchester  Przeszukiwałaś Facebooka\n",
-       "154    154                            Barcelona  Przeszukiwałaś Facebooka\n",
-       "155    155                           sPORT TEAM  Przeszukiwałaś Facebooka\n",
-       "156    156                      Mark Zuckerberg  Przeszukiwałaś Facebooka\n",
-       "157    157                      mark zuckerberg  Przeszukiwałaś Facebooka\n",
-       "\n",
-       "[158 rows x 3 columns]"
+       "                                         topic\n",
+       "0  Software Engineering & Computer Programming\n",
+       "1                             Computer Science\n",
+       "2   Artificial Intelligence & Machine Learning\n",
+       "3                       Clothing & Accessories"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "topics"
+   ]
   }
  ],
  "metadata": {
