--- a/frontend/translations/pl/LC_MESSAGES/messages.po
+++ b/frontend/translations/pl/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-02-05 12:40+0100\n"
+"POT-Creation-Date: 2021-02-05 12:56+0100\n"
 "PO-Revision-Date: 2021-01-16 08:10+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: pl\n"
@@ -30,6 +30,10 @@ msgstr "Adresy ip"
 #: analytics/administration/logins_by_hour.py:7
 msgid "Percent of logins by hour"
 msgstr "Procent logowań względem godziny"
+
+#: analytics/administration/mobile_devices.py:7
+msgid "Mobile devices"
+msgstr "Urządzenia mobilne"
 
 #: analytics/administration/off_fb_activity.py:12
 msgid "Pages you visited while being logged into facebook"
