--- a/frontend/translations/pl/LC_MESSAGES/messages.po
+++ b/frontend/translations/pl/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-02-05 12:56+0100\n"
+"POT-Creation-Date: 2021-02-05 13:36+0100\n"
 "PO-Revision-Date: 2021-01-16 08:10+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: pl\n"
@@ -26,6 +26,10 @@ msgstr "Urządzenia"
 #: analytics/administration/ips.py:7
 msgid "IP addresses"
 msgstr "Adresy ip"
+
+#: analytics/administration/last_location.py:7
+msgid "Last known location"
+msgstr "Ostatnia znana lokalizacja"
 
 #: analytics/administration/logins_by_hour.py:7
 msgid "Percent of logins by hour"
